k8s/jobs-handler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs-handler
  namespace: blixter
  labels: { app: jobs-handler }
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector: { matchLabels: { app: jobs-handler } }
  template:
    metadata: { labels: { app: jobs-handler } }
    spec:
      containers:
        - name: jobs-handler
          image: ghcr.io/mp281x/blixter-jobs-handler:latest
          envFrom: [{ secretRef: { name: jobs-handler } }]
