k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper 
  namespace: blixter
  labels: { app: zookeeper }
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector: { matchLabels: { app: zookeeper } }
  template:
    metadata: { labels: { app: zookeeper } }
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:latest
          ports: [containerPort: 2181]
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: blixter
spec:
  selector: { app: zookeeper }
  ports: [{ port: 2181, name: zookeeper, targetPort: 2181 }]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka 
  namespace: blixter
  labels: { app: kafka }
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector: { matchLabels: { app: kafka } }
  template:
    metadata: { labels: { app: kafka } }
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          ports: [containerPort: 9092]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: blixter
spec:
  selector: { app: kafka }
  ports: [{ port: 9092, name: kafka, targetPort: 9092 }]
  clusterIP: 10.43.0.207
