k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: blixter
  labels: { app: redis }
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector: { matchLabels: { app: redis } }
  template:
    metadata: { labels: { app: redis } }
    spec:
      containers:
        - name: redis
          image: redis/redis-stack:latest
          ports: [{ containerPort: 8001 }, { containerPort: 6379 }]

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: blixter
spec:
  selector: { app: redis }
  ports: [{ port: 8001, name: redis-ui, targetPort: 8001 }, { port: 6379, name: redis, targetPort: 6379 }]
  clusterIP: 10.43.0.205

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redis
  namespace: blixter
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`redis-blixter.mp281x.xyz`)
      kind: Rule
      services: [{ name: redis, port: 8001 }]
